changed unit colors

--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,9 @@
   --checked-blue: #7b458f;
 
   /* ranking border colors */
-  --a-rank: #BA82FF;
-  --b-rank: #9082FF;
-  --c-rank: #0082FFCC;
+  --a-rank: #91001F;
+  --b-rank: #1E088E;
+  --c-rank: #749335;
 }
 
 p {
