changed rank colors

--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,9 @@
   --checked-blue: #7b458f;
 
   /* ranking border colors */
-  --a-rank: #91001F;
-  --b-rank: #1E088E;
-  --c-rank: #749335;
+  --a-rank: #5B3283;
+  --b-rank: #5B3283;
+  --c-rank: #5B3283;
 }
 
 p {
